# shark

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
apps/sandbox/: CMakeLists.txt  agility_sdk_exports.cpp  camera_controller.cpp  camera_controller.hpp  main.cpp  options.cpp  options.hpp
cmake/: Shark.Windows.manifest  SharkCompilerOptions.cmake  SharkShaders.cmake  SharkVcpkgToolchain.cmake  VerifyExpectedBuildFailure.cmake  VerifyShaderDependencies.cmake
content/source/sky/: LICENSE.md  README.md  shark_orientation_sky_srgb.dds
docs/: BUILDING.md  CAMERA_AND_CUBE.md  DDS_CUBEMAP.md  DEPENDENCIES.md  DIAGNOSTICS.md  ENGINE_PLAN.md  FLUIDS.md  GPU_DIAGNOSTICS.md  GRAPHICS_DEVICE.md  GRAPHICS_PIPELINE.md  GRAPHICS_PRESENTATION.md  PLATFORM.md  RENDER_GRAPH.md  SIMULATION.md  SKYBOX.md  TERRAIN.md  WINDOWS_SETUP.md
engine/: CMakeLists.txt
engine/assets/include/shark/assets/: dds_cubemap.hpp  environment_lighting.hpp
engine/assets/src/: dds_cubemap.cpp  environment_lighting.cpp
engine/core/include/shark/core/: assertion.hpp  engine_info.hpp  error.hpp  logging.hpp  math.hpp  result.hpp
engine/core/src/: assertion.cpp  engine_info.cpp  error.cpp  logging.cpp  math.cpp
engine/fluids/include/shark/fluids/: shallow_water_reference.hpp
engine/fluids/src/: shallow_water_reference.cpp
engine/physics/include/shark/physics/: ballistic_body.hpp  body_island.hpp  box_collider.hpp  box_contact.hpp  broad_phase.hpp  capsule_collider.hpp  capsule_contact.hpp  contact_constraint.hpp  persistent_contact.hpp  rigid_body.hpp  sphere_body_collision.hpp  sphere_collider.hpp  sphere_terrain_contact.hpp
engine/physics/src/: ballistic_body.cpp  body_island.cpp  box_collider.cpp  box_contact.cpp  broad_phase.cpp  capsule_contact.cpp  contact_constraint.cpp  persistent_contact.cpp  rigid_body.cpp  sphere_body_collision.cpp  sphere_terrain_contact.cpp
engine/platform/windows/include/shark/platform/: application.hpp  events.hpp
engine/platform/windows/src/: application.cpp
engine/render_graph/include/shark/render_graph/: render_graph.hpp
engine/render_graph/src/: render_graph.cpp
engine/renderer/include/shark/renderer/: renderer.hpp
engine/renderer/src/: frame_pipeline.cpp  frame_pipeline.hpp  terrain_frustum_culling.cpp  terrain_frustum_culling.hpp  terrain_lod_selection.cpp  terrain_lod_selection.hpp
engine/renderer/src/d3d12/: cube_scene_data.hpp  daylight_scene_data.hpp  environment_scene_data.hpp  gpu_timestamp_state.cpp  gpu_timestamp_state.hpp  renderer.cpp  skybox_scene_data.hpp  terrain_scene_data.hpp  water_scene_data.hpp
engine/rhi/d3d12/include/shark/rhi/d3d12/: device.hpp  presentation.hpp
engine/rhi/d3d12/src/: cube_scene_data.hpp  daylight_scene_data.hpp  device.cpp  device_access.hpp  frame_resource_state.cpp  frame_resource_state.hpp  gpu_timestamp_state.cpp  gpu_timestamp_state.hpp  presentation.cpp  render_graph_executor.cpp  render_graph_executor.hpp  skybox_scene_data.hpp  terrain_scene_data.hpp
engine/simulation/include/shark/simulation/: fixed_step_clock.hpp
engine/simulation/src/: fixed_step_clock.cpp
engine/terrain/include/shark/terrain/: height_tile.hpp  lake_basin.hpp  material_palette.hpp
engine/terrain/src/: height_tile.cpp  lake_basin.cpp  material_palette.cpp
engine/world/include/shark/world/: camera.hpp  environment_lab_scenario.hpp
engine/world/src/: camera.cpp  environment_lab_scenario.cpp
ports/directx-warp/: directx-warp-config.cmake  portfile.cmake  vcpkg.json
scripts/: check-prerequisites.ps1  generate-orientation-cubemap.ps1
shaders/: CMakeLists.txt
shaders/cube/: cube.hlsl
shaders/material_sphere/: material_sphere.hlsl
shaders/shared/: camera_constants.hlsli  daylight.hlsli  pbr_ibl.hlsli  triangle_data.hlsli
shaders/sky/: skybox.hlsl
shaders/terrain/: terrain.hlsl
shaders/tone_map/: tone_map.hlsl
shaders/triangle/: triangle.hlsl
shaders/water/: water.hlsl
tests/: CMakeLists.txt
tests/fixtures/shaders/: dependency_probe.hlsl  dependency_probe_values.hlsli  malformed.hlsl  warning.hlsl
tests/unit/: assertion_tests.cpp  camera_controller_tests.cpp  camera_tests.cpp  d3d12_cube_scene_data_tests.cpp  d3d12_daylight_scene_data_tests.cpp  d3d12_device_contract_tests.cpp  d3d12_frame_resource_tests.cpp  d3d12_gpu_timestamp_tests.cpp  d3d12_render_graph_executor_tests.cpp  d3d12_skybox_scene_data_tests.cpp  d3d12_terrain_scene_data_tests.cpp  dds_cubemap_tests.cpp  engine_info_tests.cpp  environment_lab_scenario_tests.cpp  environment_lighting_tests.cpp  fluids_shallow_water_reference_tests.cpp  logging_tests.cpp  math_tests.cpp  physics_ballistic_body_tests.cpp  physics_body_island_tests.cpp  physics_box_contact_tests.cpp  physics_box_dynamics_tests.cpp  physics_broad_phase_tests.cpp  physics_capsule_contact_tests.cpp  physics_contact_constraint_tests.cpp  physics_persistent_contact_tests.cpp  physics_rigid_body_tests.cpp  physics_sphere_body_collision_tests.cpp  physics_sphere_terrain_contact_tests.cpp  render_graph_tests.cpp  renderer_contract_tests.cpp  renderer_d3d12_cube_scene_data_tests.cpp  renderer_d3d12_daylight_scene_data_tests.cpp  renderer_d3d12_environment_scene_data_tests.cpp  renderer_d3d12_gpu_timestamp_tests.cpp  renderer_d3d12_skybox_scene_data_tests.cpp  renderer_d3d12_terrain_scene_data_tests.cpp  renderer_d3d12_water_scene_data_tests.cpp  renderer_frame_pipeline_tests.cpp  renderer_terrain_frustum_culling_tests.cpp  (+9 more)
triplets/: x64-windows-shark.cmake
